--- a/MPChartExample/res/layout/activity_linechart_time.xml
+++ b/MPChartExample/res/layout/activity_linechart_time.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/seekBar1" />
+        android:layout_above="@+id/seekBar1"/>
 
     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:max="1500"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_toLeftOf="@+id/tvXMax"/>
+        android:layout_toLeftOf="@+id/tvXMax"
+        android:layout_toStartOf="@+id/tvXMax"
+        android:max="1500"/>
 
     <TextView
         android:id="@+id/tvXMax"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="500"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
         android:layout_alignParentBottom="true"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="end"
+        android:text="500"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 </RelativeLayout>
