--- a/MPChartExample/res/layout/activity_radarchart_noseekbar.xml
+++ b/MPChartExample/res/layout/activity_radarchart_noseekbar.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.6"
         android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="YOUR PREFERENCES"
-        android:id="@+id/textView"/>
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <com.github.mikephil.charting.charts.RadarChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2" />
+        android:layout_weight="2"/>
 
 </LinearLayout>
