--- a/MPChartExample/res/layout/list_item.xml
+++ b/MPChartExample/res/layout/list_item.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp">
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
         android:text="Medium Text"
-        android:textSize="16dp"/>
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvName"
+        android:layout_alignStart="@+id/tvName"
         android:layout_below="@+id/tvName"
-        android:layout_marginTop="3dp"
-        android:text="Small Text"
-        android:textSize="12dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="3dp"
         android:layout_toLeftOf="@+id/tvNew"
-        android:layout_toStartOf="@+id/tvNew" />
+        android:layout_toStartOf="@+id/tvNew"
+        android:text="Small Text"
+        android:textSize="12sp"/>
 
     <TextView
-        android:padding="7dp"
+        android:id="@+id/tvNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="NEW"
-        android:background="@drawable/new_background"
-        android:textColor="@android:color/white"
-        android:id="@+id/tvNew"
-        android:textSize="11dp"
-        android:layout_marginRight="5dp"
-        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/new_background"
+        android:padding="7dp"
+        android:text="NEW"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/white"
+        android:textSize="11sp"/>
 
 </RelativeLayout>
